# ceiling-fans-control

./: .gitignore  Cargo.toml  README.md  build.rs  ceiling_fans.yaml  config_sample.yaml  control_fan.py  decode_fan_remote.py  fan-remote.yaml  homekit_bridge.py  onlyfansd.py  protocol.txt
buildroot/package/onlyfansd/: Config.in  S99onlyfansd  onlyfansd.mk
rpitx-shim/: shim.cpp  shim.h
src/: cc1101.rs  homekit.rs  main.rs  rpitx.rs
utils/: README.md  esphome_send.sh  fan_cli.py  generate_esphome_config.py  ha_send.sh  homekit_bridge.py
