[package]
name = "onlyfansd"
version = "0.1.0"
edition = "2021"
# build.rs compiles rpitx-shim/shim.cpp and links librpitx.
build = "build.rs"

[[bin]]
name = "onlyfansd"
path = "src/main.rs"

[build-dependencies]
cc = "1"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures-util = "0.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hap = { path = "vendor/hap-rs" }

[profile.release]
opt-level = "z"   # optimise for size on the Pi
lto = true
strip = true
